--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ cache:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y git-core build-essential cmake
-  - mkdir -p vendor && cd vendor;\
-    git clone https://github.com/OpenKinect/libfreenect && cd libfreenect;\
-    mkdir -p build && cd build;\
-    cmake -L ..;\
-    make -j$(nproc);\
+  - mkdir -p vendor && cd vendor;
+    git clone https://github.com/OpenKinect/libfreenect && cd libfreenect;
+    mkdir -p build && cd build;
+    cmake -L ..;
+    make -j$(nproc);
     make install
 install:
   - npm install
