--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
   - vendor
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y git-core build-essential cmake
+  - sudo apt-get install -y git-core build-essential cmake libusb-1.0
   - mkdir -p vendor && cd vendor;
     git clone https://github.com/OpenKinect/libfreenect && cd libfreenect;
     mkdir -p build && cd build;
