fix: add sudo permission when install libfreenect dep in travis ocnfig

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
     mkdir -p build && cd build;
     cmake -L ..;
     make -j$(nproc);
-    make install
+    sudo make install
 install:
   - npm install
 script:
