update: travis  fixed

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os:
   - linux
   - osx
 sudo:
-  - false
+  - true
 notifications:
   slack: rubeniskov:I82ZGuYOEQrhl29wBbQFEdjP#nkinect
 cache:
@@ -26,12 +26,12 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         echo "Installing required dependencies for Linux";
         apt-get -qq update;
-        apt-get install -y git-core build-essential cmake libusb-1.0;
+        apt-get install -y git-core cmake build-essential libusb-1.0;
     fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         echo "Installing required dependencies for MacOS";
         brew update;
-        brew install cmake libusb-1.0;
+        brew install git-core cmake libusb-devel libtool;
     fi
   - echo "Building  libfreenect";
     mkdir -p vendor && cd vendor;
