--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "presets": [
       "es2015",
       "stage-0"
+    ],
+    "plugins": [
+      "transform-class-constructor-call"
     ]
   },
   "browserify": {
@@ -63,7 +66,8 @@
   "dependencies": {
     "bindings": "^1.2.1",
     "keypress": "^0.2.1",
-    "nan": "^2.6.2"
+    "nan": "^2.6.2",
+    "readable-stream": "^2.3.3"
   },
   "bundleDependencies": [
     "bindings",
