--- a/package.json
+++ b/package.json
@@ -46,7 +46,15 @@
       "stage-0"
     ],
     "plugins": [
-      "transform-class-constructor-call"
+      "transform-class-constructor-call",
+      [
+        "transform-runtime",
+        {
+          "polyfill": true,
+          "regenerator": true,
+          "helpers": true
+        }
+      ]
     ]
   },
   "browserify": {
@@ -64,6 +72,7 @@
   },
   "gypfile": true,
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "bindings": "^1.2.1",
     "keypress": "^0.2.1",
     "nan": "^2.6.2",
@@ -76,6 +85,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babelify": "^7.3.0",
