--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ install:
   - set PATH=%APPDATA%\npm;%APPVEYOR_BUILD_FOLDER%\node_modules\.bin;%PATH%
   - npm i --ignore-scripts
   - for /f %%i in ('node -v') do set exact_nodejs_version=%%i
-  - prebuild -b %exact_nodejs_version% --strip
+  # - prebuild -b %exact_nodejs_version% --strip
 
 test_script:
   - npm test
